--- a/capitulo5.html
+++ b/capitulo5.html
@@ -724,14 +724,14 @@ Para verificar se ocorreu a inserção de dados, vamos consultar os 8 primeiros 
 <p><img alt="Figura 1" src="_images/fig5_70.png" /></p>
 <p>Podemos verificar que não existem dados armazenados na tabela.</p>
 <p>Vamos aplicar a consulta apresentada na figura abaixo para inserir os dados nessa tabela.</p>
-<p><img alt="Figura 1" src="_images/fig5_16.png" /></p>
+<p><img alt="Figura 1" src="_images/fig5_71.png" /></p>
 <p>No código acima, a função ST_GeomFromText é usada para criar uma geometria a partir de um texto no formato WKT (Well-Known Text). O primeiro parâmetro é a string WKT que representa o ponto geográfico, e o segundo parâmetro é o SRID (4674 refere-se ao SIRGAS2000).</p>
 <p>Após a inserção dos dados, atualize o banco de dados.</p>
-<p><img alt="Figura 1" src="_images/fig5_71.png" /></p>
+<p><img alt="Figura 1" src="_images/fig5_73.png" /></p>
 <p>A tabela “capitais” foi criada com sucesso.</p>
 <p>Vamos consultar os primeiros 5 registros desta tabela, conforme consulta apresentada na figura abaixo.</p>
 <p><img alt="Figura 1" src="_images/fig5_72.png" /></p>
-<p>Caso alguma tabela criada anteriormente não apareça na árvore, aplique “refresh” para atualizá-la.</p>
+<p>Caso alguma tabela criada anteriormente não apareça na árvore, aplique “refresh” novamente para atualizá-la.</p>
 <p><img alt="Figura 1" src="_images/fig5_73.png" /></p>
 <p>Ao final desta seção, teremos as seguintes tabelas no banco de dados:</p>
 <p><img alt="Figura 1" src="_images/fig5_74.png" /></p>
